[gd_scene load_steps=16 format=3 uid="uid://c3wkbrky7csoc"]

[ext_resource type="Script" path="res://code/enemy/cb_enemy.gd" id="1_bw6ft"]
[ext_resource type="Texture2D" uid="uid://cc73t3q5m0rnq" path="res://assets/sprites/mobs/chupa_cu.png" id="1_uk7ib"]
[ext_resource type="PackedScene" uid="uid://c82gf0410xl2o" path="res://code/enemy/enemy_spell.tscn" id="2_khkdb"]
[ext_resource type="Texture2D" uid="uid://bshnfbnvdeny2" path="res://assets/sprites/slash.png" id="3_1yt8w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8b82y"]
resource_local_to_scene = true
size = Vector2(62, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n75v2"]
resource_local_to_scene = true
size = Vector2(96, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vlmja"]
resource_local_to_scene = true
size = Vector2(320, 320)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scpx6"]
bg_color = Color(0, 0.718952, 0.352663, 1)

[sub_resource type="Animation" id="Animation_eewp8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cbEnemy/sprHit:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cbEnemy/sprEnemy:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cbEnemy/sprEnemy:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_birvk"]
resource_name = "getHit"
length = 0.250002
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cbEnemy/sprHit:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cbEnemy/sprEnemy:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.0833333, 0.133333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_d7niy"]
resource_name = "attack"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cbEnemy/sprEnemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(64, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cbEnemy/sprHit:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cbEnemy/sprEnemy:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7dibr"]
resource_name = "attackLeft"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cbEnemy/sprEnemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-64, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cbEnemy/sprHit:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cbEnemy/sprEnemy:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gkenj"]
resource_name = "attackDown"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cbEnemy/sprEnemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 64), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cbEnemy/sprEnemy:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cbEnemy/sprHit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_mmsbc"]
resource_name = "attackUp"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cbEnemy/sprEnemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -64), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cbEnemy/sprEnemy:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cbEnemy/sprHit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4764v"]
_data = {
"RESET": SubResource("Animation_eewp8"),
"attack": SubResource("Animation_d7niy"),
"attackDown": SubResource("Animation_gkenj"),
"attackLeft": SubResource("Animation_7dibr"),
"attackUp": SubResource("Animation_mmsbc"),
"getHit": SubResource("Animation_birvk")
}

[node name="enemy" type="Node2D" groups=["Enemy"]]

[node name="cbEnemy" type="CharacterBody2D" parent="." groups=["Enemy"]]
script = ExtResource("1_bw6ft")
hp = 15
spell = ExtResource("2_khkdb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="cbEnemy"]
shape = SubResource("RectangleShape2D_8b82y")
debug_color = Color(6.73831e-07, 0.643642, 0.296235, 0.42)

[node name="sprEnemy" type="Sprite2D" parent="cbEnemy"]
scale = Vector2(-0.032, 0.032)
texture = ExtResource("1_uk7ib")

[node name="attack" type="Area2D" parent="cbEnemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cbEnemy/attack"]
shape = SubResource("RectangleShape2D_n75v2")

[node name="sprHit" type="Sprite2D" parent="cbEnemy"]
visible = false
scale = Vector2(0.187, 0.187)
texture = ExtResource("3_1yt8w")

[node name="detectPlayer" type="Area2D" parent="cbEnemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cbEnemy/detectPlayer"]
shape = SubResource("RectangleShape2D_vlmja")
debug_color = Color(0.540187, 0.56748, 0, 0.42)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="cbEnemy"]
path_desired_distance = 32.0
path_max_distance = 128.0
simplify_path = true
simplify_epsilon = 32.0

[node name="pbHP" type="ProgressBar" parent="cbEnemy"]
custom_minimum_size = Vector2(64, 0)
offset_left = -32.0
offset_top = 40.0
offset_right = 32.0
offset_bottom = 67.0
scale = Vector2(1, 0.328)
theme_override_styles/fill = SubResource("StyleBoxFlat_scpx6")
value = 50.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4764v")
}

[connection signal="body_entered" from="cbEnemy/attack" to="cbEnemy" method="_on_detection_body_entered"]
[connection signal="body_exited" from="cbEnemy/attack" to="cbEnemy" method="_on_detection_body_exited"]
[connection signal="body_entered" from="cbEnemy/detectPlayer" to="cbEnemy" method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="cbEnemy/detectPlayer" to="cbEnemy" method="_on_detect_player_body_exited"]
[connection signal="target_reached" from="cbEnemy/NavigationAgent2D" to="cbEnemy" method="_on_navigation_agent_2d_target_reached"]
